# rust-react-personal-website

./: .env.example  .gitignore  Cargo.toml  Procfile  package-lock.json  package.json  vite.config.js
src/: config.rs  index.html  main.jsx  main.rs
src/pages/Home/: index.jsx
src/utils/: renderer.rs
